Sonarqube findings
Fixes: SIRI-1220